2004-08-10  Mark Brown  <broonie@sirena.org.uk>

	* ypxfr/ypxfr_clnt.c (ypproc_master_2): memset() the response
	structure before calling clnt_call().
	(ypproc_order_2): Likewise.
	* ypxfr/ypxfr_xdr.c (ypproc_all_2): Likewise.

2004-04-14  Thorsten Kukuk  <kukuk@suse.de>

	* release version 2.13

	* etc/ypserv.conf.5 (slp): Document slp: domain option.

	* ypserv/slp_reg.c: If slp: domain option is set, create attr
	with all supported domain names.

	* lib/yp_db.c (ypdb_open): Fix memory leak if the cache is too small
	and the map does not exist. Reported by Feng Qin <fengqin@uiuc.edu>.

	* rpc.ypxfrd/ypxfrd_svc.c: Reformat.

	* scripts/ypMakefile.in (services.byservicename): Add aliases
	as key with /proto, too. Patch from Jakub Jelinek <jakub@redhat.com>.

2004-04-01  Thorsten Kukuk  <kukuk@suse.de>

	* release version 2.12.2

	* lib/ypserv.conf: Add slp_timeout.
	* lib/ypserv_conf.h: Add slp_timeout prototype.
	* lib/ypserv_conf.c: Add slp_timeout support.
	* ypserv/reg_slp.c: Set alarm handler to re-register service.

2004-04-01  Jakub Jelinek  <jakub@redhat.com>

	* scripts/ypMakefile.in (services.byservicename): Add main
	key with /proto and fix but which would trim any digits from
	protocol name.

2004-02-14  Thorsten Kukuk  <kukuk@suse.de>

	* release version 2.12.1

	* ypserv/reg_slp.c (register_slp): Change SLP URL to ypserv.

2004-02-13  Thorsten Kukuk  <kukuk@suse.de>

	* release version 2.12

	* yppush/yppush.c (yppushproc_xfrresp_1_svc): Fix compiler
	warnings.

	* ypserv/reg_slp.c: Don't set dummy domain attributes.

2004-02-07  Michael Gernoth  <simigern@stud.uni-erlangen.de>

	* ypserv/server.c: Return NOMAP error if access forbidden.

2004-01-12  Thorsten Kukuk  <kukuk@suse.de>

	* release version 2.11

	* ypxfr/ypxfr.c (main): Abort if no domainname is set.
	(Reported by Jens Laas <jens.laas@data.slu.se>)

	* yppush/yppush.c: Add support for fixed port
	(Patch from Tony Kew <tonykew@ccr.buffalo.edu>)

2004-01-09  Thorsten Kukuk  <kukuk@suse.de>
